@@ -1,6 +1,12 @@
 Changelog for GEMC
 ==================
 
+6/28/18
+ - detectors and cad factory can read the env variable "GEMC_DATA_DIR" as a base path in the gcard
+ - fixed time to distance table in gemc
+
+
+
 6/18/18
  - fixed unsmeared ftof tdc
 
